--- a/src/components/CrudApp/App.Module.css
+++ b/src/components/CrudApp/App.Module.css
@@ -1,25 +1,27 @@
 /* * {
     box-sizing: border-box;
 } */
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    }
 body {
     margin: 0px;
     font-family: 'segoe ui';
-    /* display: inline-block; */
-    /* background-color: cornflowerblue; */
-    background: url("https://img.freepik.com/vector-premium/patron-fisuras-perros-doodle-blanco-negro_102034-127.jpg?w=740");
-    /* background-size: cover; */
-    /* background: "./back.jpg"; */
-    
+    background: url("https://img.freepik.com/vector-premium/patron-fisuras-perros-doodle-blanco-negro_102034-127.jpg?w=740")
+
 }
 
 .pagebody{
     background-color: rgba(51, 51, 51, 0.85);
     width: 100%;
-    /* height: 1200px; */
     margin-top: 0;
     bottom: 0;
     height:100%;
+    overflow: hidden;
     padding:  100px 0px 50px 0px;
+    min-height: 100%;
 }
 .maincontainer{
     background-color: white;
