--- a/src/components/FooterPage/Footer.Module.css
+++ b/src/components/FooterPage/Footer.Module.css
@@ -3,7 +3,7 @@
     width: 100%;
     background-color: #010101c9;
     font-family: 'segoe ui';
-    /* position: fixed; */
+    position: fixed;
     /* top: 0px; */
     left: 0px;
     bottom: 0px;
@@ -11,6 +11,6 @@
     text-align: center;
     border-top: 0px;
     text-shadow: 2px 2px 2px rgba(51, 51, 51, 0.425);
-    height: 45px;
+    height: 25px;
     box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.5);
 }
